@startuml
'skinparam monochrome true
skinparam packageStyle Folder
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

package UI{
class ListGreenSpaceUI{

}
}
package Controller{
class ListGreenSpaceController{
    + getGreenSpaceList()
    + createListGreenSpaceController()
    + toDto(greenSpaceList)
}
}
package Domain{
package ExternalModule{
interface "ExternalModule" as EM{
    - getReferenceValue(sortingOption)
}
class ExternalModuleAdapter1{
    + getReferenceValue(sortingOption)
    + sortList(greenSpaceList,sortingOption)
}
class ExternalModuleAdapter2{
    + getReferenceValue(sortingOption)
    + sortList(greenSpaceList,sortingOption)
}
}
package Mapper{
class GreenSpaceMapper{
    - greenSpaceListDto
    + toDto(greenSpaceList)
    + addGreenSpace(greenSpaceDto)
}
package Dto{
class GreenSpaceDto{
    - name
    - dimension
    - address
    + greenSpaceDto(greenSpace)
}
}
}
package Domain.Reository{
class GreenSpaceRepository{
    - greenSpaceList
    + getGreenSpaceList()
    + getExternalModule()
    + sortList(greenSpaceList,sortingOption)
}
class CollaboratorRepository{
    - collaboratorList
    + getCollaboratorTroughEmail(email)
}

class Repositories{
 - Repositories()
 + getGreenSpaceRepository(): Repositories
 + getInstance(): Repositories
}
}
}
ListGreenSpaceUI .> ListGreenSpaceController
ListGreenSpaceController .> Repositories : repositories
Repositories -> Repositories : instance
ListGreenSpaceController .> GreenSpaceRepository: greenSpaceRepository
Repositories "1" --> "1" GreenSpaceRepository
ListGreenSpaceController "1" -> "1" GreenSpaceMapper: greenSpaceList
GreenSpaceMapper "1" -> "1" GreenSpaceDto: greenSpace
Repositories "1" --> "1" CollaboratorRepository: collaboratorRepository
ListGreenSpaceController .> CollaboratorRepository: collaboratorRepository
GreenSpaceRepository "1" -> "1" EM : getExternalModule()
EM "1" --> "1" ExternalModuleAdapter1 : getReferenceValue()
EM "1" --> "1" ExternalModuleAdapter2 : getReferenceValue()
GreenSpaceRepository "1" -> "1" ExternalModuleAdapter1 : sortList(sortingOption,greenSpaceList)
GreenSpaceRepository "1" -> "1" ExternalModuleAdapter2 : sortList(sortingOption,greenSpaceList)
@enduml